# AtendimentoBot

./: .coverage  .env.example  .gitignore  AtendimentoBot.spec  README.md  agent_service.py  bot_profile_photo.py  build_bin.sh  build_exe.bat  config.py  database.py  document_processor.py  handlers.py  handlers_legacy.py  instruction_templates.py  main.py  metrics.py  package-lock.json  package.json  pyproject.toml  rag_chain.py  rate_limiter.py  requirements-dev.txt  requirements.txt  response_intelligence.py  seed_test_data.py  telegram_commands.py  validators.py  vector_store.py  whatsapp_cloud_api.py  whatsapp_flow.py  whatsapp_web_bridge.py
docs/: guia-do-usuario.md
handlers/: __init__.py  agent.py  common.py  documents.py  faq.py  images.py  onboarding.py  panel.py  settings.py
scripts/: whatsapp_bridge.js  whatsapp_bridge_helpers.js
tests/: conftest.py  helpers.py  test_agent_handler.py  test_agent_service.py  test_bot_profile_photo.py  test_common_handler.py  test_database.py  test_document_processor.py  test_documents_handler.py  test_faq_handler.py  test_handlers_helpers.py  test_handlers_init.py  test_images_handler.py  test_main.py  test_metrics.py  test_onboarding_handler.py  test_panel_handler.py  test_rag_chain.py  test_rate_limiter.py  test_settings_handler.py  test_telegram_commands.py  test_validators.py  test_vector_store.py  test_whatsapp_cloud_api.py  test_whatsapp_flow.py  test_whatsapp_web_bridge.py
tests_js/: whatsapp_bridge_helpers.test.js
